# Credit-card-fraud-detection

./: .env.example  .gitignore  Makefile  README.md  create_python_files.py  create_remaining_files.py  create_service_files.py  create_structure.sh  docker-compose.yml  pyproject.toml  requirements.txt  verify_structure.py
config/nginx/: default.conf
config/prometheus/: prometheus.yml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  README.md  TROUBLESHOOTING.md
monitoring/alerts/: rules.yml
scripts/: generate_sample_data.py  init_db.py  setup.sh
services/api/: Dockerfile  requirements.txt
services/api/app/: config.py  database.py  main.py
services/api/app/api/v1/: api.py
services/api/app/api/v1/endpoints/: health.py  scoring.py
services/api/app/models/: database.py  enums.py  schemas.py
services/api/app/services/: feature_service.py  scoring.py
services/dashboard/: Dockerfile
services/dashboard/public/: index.html
services/dashboard/src/: App.css  App.js
services/dashboard/src/components/common/: Header.js  Sidebar.js
services/dashboard/src/components/dashboard/: Dashboard.js  RealTimeStream.js
services/dashboard/src/components/explanations/: ExplanationView.js  SHAPChart.js
services/dashboard/src/components/transactions/: TransactionList.js
services/dashboard/src/hooks/: useApi.js  useWebSocket.js
services/dashboard/src/utils/: formatters.js
